# ToDoWoo-DRF

./: .gitignore  README.md  pyproject.toml  requirements.txt  todo.sqlite3
apps/: urls.py
apps/todo/: models.py  serializers.py  urls.py  views.py
apps/todo/migrations/: 0001_initial.py  0002_initial.py
apps/users/: models.py  serializers.py  urls.py  views.py
apps/users/migrations/: 0001_initial.py
root/: settings.py  urls.py
