[tool.poetry]
name = "todowoo-drf"
version = "0.1.0"
description = ""
authors = ["Khasanjon Mamadaliyev <khasanjon.dev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0"
djangorestframework = "^3.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
